Details
-
Bug
-
Resolution: Fixed
-
Critical
-
4.5.0
-
Untriaged
-
Yes
Description
Unfortunately when the fix for MB-17231 (http://review.couchbase.org/#/c/58294) was merged into Watson/master the fix was regressed.
The patch for Watson/master is here: http://review.couchbase.org/#/c/58423
The regression occurred because we changed the ever increasing list of function parameters to enumerated options that can be used to pass to get calls. Unfortunately during this change the fix was reverted. Also the associated unit test was lost.
Interesting if the unit test had been copied to watson/master it would have worked - even without the fix. The reason for this is that bloom filers are used on get in Watson/master and we can check the bloom filter to check if the item exists - therefore we don't need to create the temporary item. The unit test therefore needs to be modified to disable bloom filters.